# slack-bot-agent

./: .env.example  .env.prod.example  .gitignore  .mcp.json  AI_Engineer_Test_Task.md  CLAUDE.md  Improvements  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  langgraph_slack_chatbot_design.md  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 2026-01-18_add_action_id_to_conversation_turns.py  2026-01-18_add_app_metrics_table.py  2026-01-18_add_conversation_turns_table.py  2026-01-18_drop_agent_checkpoints_table.py
app/: main.py
backend/: .env.example  Makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026-01-17_add_agent_checkpoints_table.py
backend/app/: main.py
backend/app/agents/: checkpointer.py  langgraph_assistant.py
backend/app/agents/analytics_chatbot/: graph.py  routing.py
backend/app/agents/analytics_chatbot/nodes/: context_resolver.py  error_handler.py  response_formatter.py  result_interpreter.py  sql_executor.py  sql_retrieval.py
backend/app/agents/assistant/: graph.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  agent.py  conversations.py  items.py  slack.py
backend/app/commands/: seed.py
backend/app/core/: config.py  logging_config.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  checkpoint.py  conversation.py
backend/app/repositories/: __init__.py  base.py  checkpoint.py  conversation.py
backend/app/schemas/: __init__.py  conversation.py
backend/app/services/: __init__.py  agent.py  conversation.py  slack.py
backend/cli/: commands.py
backend/evals/: __init__.py  evaluator.py  main.py  schemas.py
backend/evals/metrics/prompts/: accuracy.md
backend/evals/reports/: eval_report_20260117_183528.json  eval_report_20260117_183554.json
backend/tests/: test_core.py  test_repositories.py
backend/tests/api/: test_health.py  test_items.py  test_slack.py
docs/: Future Improvements.md  adding_features.md  agent_architecture.md  architecture.md  conversation_history_design.md  database_skill.md  evals.md  patterns.md  system-architecture.md  testing.md
evals/: __init__.py  analytics_dataset.py  dataset.py  evaluator.py  main.py  schemas.py
experiments/analytics-app/: README.md  manifest.json  pyproject.toml
experiments/analytics-app/.slack/: config.json
experiments/analytics-app/listeners/events/: __init__.py  message.py
tests/: conftest.py  test_commands.py  test_conversation_history.py  test_core.py  test_repositories.py
trained_prompts/: .gitkeep  sql_generator.txt
training/: __init__.py  budget.py  chatbot_wrapper.py  datasets.py  evaluation.py  prompts.py  rewards.py  rollouts.py  train.py
training_results/: baseline_2026-01-22T14-45-01.225672.json  baseline_2026-01-22T14-52-23.702170.json
(+51 files in other folders)
