[project]
name = "analytics-app"
version = "0.1.0"
description = "AI Agent App Template (Bolt for Python) for Slack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.39.0",
    "slack-bolt>=1.27.0",
    "slack-cli-hooks<1.0.0",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.ruff]
[tool.ruff.lint]
[tool.ruff.format]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
